--- a/src/app.css
+++ b/src/app.css
@@ -1,79 +1,294 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* Fonts */
+html * {
+  font-family: "SFUI" !important;
+  overflow-x: hidden;
+}
+@font-face {
+  font-family: "SFUI";
+  src: url('assets/fonts/SF-Pro-Display-Medium.otf') format('opentype');
+  font-weight: normal;
+}
+@font-face {
+  font-family: "SFUI";
+  src: url('assets/fonts/SF-Pro-Display-Bold.otf') format('opentype');
+  font-weight: bold;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+/* Scrollbar */
+::-webkit-scrollbar {
+width: 0.3vw;
 }
-a:hover {
-  color: #535bf2;
+::-webkit-scrollbar-thumb {
+background: #BDBDBD;
+border-radius: 0.15vw;
+}
+::-webkit-scrollbar-thumb:hover {
+background: #6E6E6E;
 }
 
+#h1 {
+  font-size: 84px;
+  font-weight: bold;
+}
+#h2 {
+font-size: 36px;
+max-width: 660px;
+text-align: center;
+
+
+}
+#h2, #h4 {
+  font-weight: normal;
+}
+#h1, #h2, #h4 {
+  z-index: 100 !important;
+  padding: 3vh;
+  margin: auto;
+}
+
+div {
+  text-shadow: rgb(190, 190, 190) 1px 0 10px;
+}
+br {
+display: block;
+margin: 0px 0;
+line-height: 25px;
+}
+#main-container {
+  /* position: absolute; */
+  width: 100%;
+  height: 80%;
+  text-align: center;
+} 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  color: white;
+  text-align: center;
+}
+#background {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background: linear-gradient(to right, #2c3263, #1b1b27 5%, #1b1b27 95%, #2c3263 100%);
+}
+section {
+  width: 100%;
+  text-align: center;
+}
+#header {
+  height: 20vh !important;
+}
+button {
+  margin-top: 24px;
+  border-radius: 48px;
+  padding: 16px 72px;
+  font-size: 24px;
+  /* font-weight: bold; */
+  background-color: #6873d4;
+  border: none;
+  color: white;
+}
+button:hover {
+  cursor: pointer;
+  background-color: #7881d3;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+@keyframes rotate {
+from {
+  rotate: 0deg;
+}
+
+50% {
+  scale: 1 1.5;
+}
+
+to {
+  rotate: 360deg;
+}
+}
+/* #X {
+font-family: "Arial" !important;
+font-size: 72px;
+text-shadow: rgb(255, 255, 255) 1px 0 20px, rgb(255, 255, 255) 1px 0 40px, rgb(255, 255, 255) 1px 0 60px;
+} */
+
+
+#blur {
+position: fixed;
+left: 0;
+top: 0;
+height: 100%;
+width: 100%;
+z-index: 0;
+backdrop-filter: blur(3vmax);
+}
+
+#modal-blur {
+opacity: 0;
+position: fixed;
+left: 0;
+top: 0;
+height: 100%;
+width: 100%;
+z-index: -200;
+backdrop-filter: blur(0.5vmax);
+}
+
+@media (pointer:none), (pointer:coarse) {
+  #blob {
+      visibility: hidden;
+  }
+  #blur{
+      visibility: hidden;
+  }
+}
+
+span {
+  width: auto;
+}
+a {
+color: white;
+text-decoration: none;
+transition: background-color 0.3s ease;
+position: relative;
+}
+/* link animation */
+a::after {
+content: '';
+transform: scaleX(0);
+transform-origin: right;
+width: 100% !important;
+height: 2px;
+left: 0;
+background: currentColor;
+transition: ease 0.5s;
+position: absolute;
+bottom: 0;
+}
+a:hover::after,
+a:focus::after {
+  transform: scaleX(1);
+  transform-origin: left;
+}
+/* end link animation */
+
+.team-container {
+display: flex;
+align-items: center;
+flex-direction: column;
+}
+#team-title { 
+position: relative;
+margin-top: 60vh;
+font-size: 54px;
+font-weight: bold;
+}
+.team-bios {
+display: flex;
+flex-wrap: wrap;
+gap: 16px;  
+max-width: 948px;
+align-items: center;
+justify-content: center;
+padding: 24px;
+padding-bottom: 100px;
+}
+
+.description {
+position: absolute;
+text-align: left;
+align-items: center;
+top: 50%;
+transform: translateY(-50%);
+padding: 5%;
+right: 0%;
+width: 70%;
+visibility: hidden;
+opacity: 0;
 }
 
 .card {
-  padding: 2em;
+background-color: rgba(255, 255, 255, 0.1);
+border-radius: 20px;
+cursor: pointer;
+display: flex;
+flex-direction: column;
+position: relative;
+width: 300px;  
+aspect-ratio: 9 / 10;
+/* z-index: 200; */
+z-index: 400;
+font-size: 24px;
+overflow-y: clip;
+background-size: cover;
+background-image: url("img/team/mohamad_hallal.png");
 }
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.card:hover {
+transform: scale(1.05);
+transition: ease 300ms;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.card:not(:hover) {
+transition: ease 300ms;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.card > h6 {
+position: absolute;
+bottom: 0;
+margin-bottom: 0;
+width: 100%;
+align-items: center;
+font-size: 28px;
+font-weight: bold;
+backdrop-filter: blur(0.1vmax);
+}
+
+#mission-container {
+z-index: 4000;
+max-width: 50%;
+
+transform: translateX(50%);
+margin-top: 20%;
+margin-bottom: 20%;
+}
+#mission-title {
+font-weight: bold;
+font-size: 48px;
+z-index: 4000;
+text-align: center;
+background: linear-gradient(to right, #6873d4, #ffffff 80%);
+-webkit-text-fill-color: transparent; 
+-webkit-background-clip: text; 
+text-shadow: none;
+
+}
+
+#description-container {
+z-index: 4000;
+width: 50%;
+left: 50%;
+transform: translateX(-50%);
+}
+#description-title {
+font-weight: bold;
+font-size: 48px;
+z-index: 4000;
+text-align: center;
+}
+
+#footer {
+position: absolute;
+text-align: center;
+height: auto;
+font-size: 1rem;
+z-index: 4000;
+margin-bottom: 5%;
+width: 100%;
+border-radius: 5vh;
+color: white;
+}
+#footer > span {
+margin: 1rem;
 }
