--- a/src/app.css
+++ b/src/app.css
@@ -43,6 +43,11 @@ text-align: center;
   padding: 3vh;
   margin: auto;
 }
+#h5 {
+  font-size: 36px;
+  width: 100%;
+  text-align: center;
+  }
 
 div {
   text-shadow: rgb(190, 190, 190) 1px 0 10px;
@@ -160,88 +165,3 @@ a:focus::after {
   transform-origin: left;
 }
 /* end link animation */
-
-.team-container {
-display: flex;
-align-items: center;
-flex-direction: column;
-}
-#team-title { 
-position: relative;
-margin-top: 60vh;
-font-size: 54px;
-font-weight: bold;
-}
-.team-bios {
-display: flex;
-flex-wrap: wrap;
-gap: 16px;  
-max-width: 948px;
-align-items: center;
-justify-content: center;
-padding: 24px;
-padding-bottom: 100px;
-}
-
-.description {
-position: absolute;
-text-align: left;
-align-items: center;
-top: 50%;
-transform: translateY(-50%);
-padding: 5%;
-right: 0%;
-width: 70%;
-visibility: hidden;
-opacity: 0;
-}
-
-.card {
-background-color: rgba(255, 255, 255, 0.1);
-border-radius: 20px;
-cursor: pointer;
-display: flex;
-flex-direction: column;
-position: relative;
-width: 300px;  
-aspect-ratio: 9 / 10;
-/* z-index: 200; */
-z-index: 400;
-font-size: 24px;
-overflow-y: clip;
-background-size: cover;
-background-image: url("img/team/mohamad_hallal.png");
-}
-
-.card:hover {
-transform: scale(1.05);
-transition: ease 300ms;
-}
-
-.card:not(:hover) {
-transition: ease 300ms;
-}
-
-.card > h6 {
-position: absolute;
-bottom: 0;
-margin-bottom: 0;
-width: 100%;
-align-items: center;
-font-size: 28px;
-font-weight: bold;
-backdrop-filter: blur(0.1vmax);
-}
-
-#description-container {
-z-index: 4000;
-width: 50%;
-left: 50%;
-transform: translateX(-50%);
-}
-#description-title {
-font-weight: bold;
-font-size: 48px;
-z-index: 4000;
-text-align: center;
-}
