--- a/src/app.css
+++ b/src/app.css
@@ -74,6 +74,12 @@ body {
   top: 0;
   background: linear-gradient(to right, #2c3263, #1b1b27 5%, #1b1b27 95%, #2c3263 100%);
 }
+.headings {
+  position: relative;
+  font-size: 54px;
+  font-weight: bold;
+  margin: 50px;
+}
 section {
   width: 100%;
   text-align: center;
@@ -165,3 +171,10 @@ a:focus::after {
   transform-origin: left;
 }
 /* end link animation */
+
+.arrow-icon {
+  color: white;
+}
+.arrow-icon:hover {
+  color: #9a9ce9;
+}
