--- a/src/app.css
+++ b/src/app.css
@@ -31,9 +31,9 @@ background: #6E6E6E;
   font-weight: bold;
 }
 #h2 {
-font-size: 36px;
-max-width: 660px;
-text-align: center;
+  font-size: 36px;
+  max-width: 660px;
+  text-align: center;
 }
 #h2, #h4 {
   font-weight: normal;
@@ -47,7 +47,7 @@ text-align: center;
   font-size: 36px;
   width: 100%;
   text-align: center;
-  }
+}
 
 br {
 display: block;
@@ -77,6 +77,7 @@ body {
   font-size: 54px;
   font-weight: bold;
   margin: 50px;
+  padding: 10px;
 }
 section {
   width: 100%;
