--- a/src/app.css
+++ b/src/app.css
@@ -27,11 +27,11 @@ background: #6E6E6E;
 }
 
 #h1 {
-  font-size: 84px;
+  font-size: 5.5rem;
   font-weight: bold;
 }
 #h2 {
-  font-size: 36px;
+  font-size: 2.5rem;
   max-width: 660px;
   text-align: center;
 }
@@ -50,9 +50,9 @@ background: #6E6E6E;
 }
 
 br {
-display: block;
-margin: 0px 0;
-line-height: 25px;
+  display: block;
+  margin: 0px 0;
+  line-height: 25px;
 }
 #main-container {
   /* position: absolute; */
