--- a/src/app.css
+++ b/src/app.css
@@ -27,12 +27,12 @@ background: #6E6E6E;
 }
 
 #h1 {
-  font-size: 5.5rem;
+  font-size: max(8vh, 4vw);
   font-weight: bold;
 }
 #h2 {
-  font-size: 2.5rem;
-  max-width: 660px;
+  font-size: max(1.5vw, 3vh);
+  max-width: max(30vw, 60vh);
   text-align: center;
 }
 #h2, #h4 {
