--- a/src/app.css
+++ b/src/app.css
@@ -17,11 +17,11 @@ background: #6E6E6E;
 }
 
 #h1 {
-  font-size: max(8vh, 4vw);
+  font-size: max(4vw, 40px);
   font-weight: bold;
 }
 #h2 {
-  font-size: max(1.5vw, 3vh);
+  font-size: max(1.5vw, 20px);
   max-width: max(30vw, 60vh);
   text-align: center;
 }
@@ -64,7 +64,7 @@ body {
 .headings {
   text-shadow: rgb(190, 190, 190) 1px 0 max(1vw, 2vh);
   position: relative;
-  font-size: max(3vw, 6vh);
+  font-size: max(3vw, 25px);
   font-weight: bold;
   margin: max(3vw, 6vh);
   padding: max(1vw, 2vh);
